--- a/BlogV1/appsettings.json
+++ b/BlogV1/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=KOCABAY;Database=BlogV1;Integrated Security=True;TrustServerCertificate=True;"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
